fixed spacing issues

--- a/syshard.css
+++ b/syshard.css
@@ -42,20 +42,22 @@ div.button
 {
     padding-top: 20px;
 }
+
+li.size 
+{
+    font-size: 20px;
+    margin: 0px 20px 40px 20px;
+}
+
+li.margin 
+{
+    margin-left: 100px;
+}
 button
 {
     padding: 15px 35px;
     background-color: black;
     color: white;
-}
-li.size
-{
-    font-size: 20px;
-    margin: 0px 20px 40px 20px;
-}
-li.margin
-{
-    margin-left: 100px;
 }
 
 button:hover
@@ -65,6 +67,15 @@ button:hover
     -webkit-transition-duration: 0.4s; /* Safari */
     transition-duration: 0.4s;
 }
+
+.center 
+{
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    width: 90%;
+}
+
 .mynavbar .nav li 
 {
     display: inline-block;
